
2022-02-23 Antoine Lucas

	rework on operator[]. Fix bugs.

2021-03-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Stirling-n-etc.R (dbinomQ): new; providing *exact* binomial
	probabilities.
	* DESCRIPTION (Version): 0.6-3 (not yet released)

2021-01-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* configure.ac: add definitions of CFLAGS etc  as from R,
	from a suggestion by Kaspar Daniel Hansen.
	* DESCRIPTION (Version) : 0.6-2, released to CRAN

2020-07-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/bigq.R (roundQ): use simpler *vectorized* version, always
	returning 'bigq' (as documented).
	* tests/arith-ex.R: check it works.

2020-07-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/bigq.R (round, round0, roundQ): round0(): "round to even"; make
	'round0()' the default argument to  'round(x, digits)'.

2020-06-12  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/biginteger.R (c_bigz): export, to be used, e.g.,
	* R/bigq.R (c_bigq): on  lapply(<big>, Fn) to give a <big[qz]> result, see
	* man/bigrational.Rd: the  sapplyQ()  utility in the examples.

2020-06-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.6-1  (not yet released)

	* R/Stirling-n-etc.R (BernoulliQ): Bernoulli numbers as exact fractions.
	* R/zzz.R (NA_bigz_, NA_bigq_): analogous to `NA_integer_` etc

2020-06-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* NAMESPACE: use *same* S3method(<op>, <class>, <method_fn>) for bigz and bigq,
	* R/bigq.R (add.big): so now "mixed" arithmetic and comparisons work

2020-06-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.6-0  (not yet released)

	* R/biginteger.R (as.bigz): now  as.bigz(<bigz>)  keeps a modulus

2020-05-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/AllClasses-etc.R (.diff.big): diff.big[zq]() methods

2020-03-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/matrixz.R[.dimZQ, .ncolZQ]: use `%/%` to get integer dim() and ncol()
