@@ -1,6 +1,6 @@
-401f78cbd430e79108c91b83ea1dac34 *ChangeLog
+cb49c8696441532f10718914aa6f9c47 *ChangeLog
 ebb3e86d6b9fae7939450340f88b351e *Changes
-01ddf454b2f19ae80e7071ab551dfbe0 *DESCRIPTION
+449f030837888fed64366a06eb70357b *DESCRIPTION
 c0c893f9d5ca79bcf51bec6f6ed1a22d *NAMESPACE
 031eddddcfbf9c2a9bc74c83342699e5 *R/AllClasses-etc.R
 65ac0056c1b5e56444132b029badd500 *R/Stirling-n-etc.R
@@ -53,38 +53,38 @@ d8cb9c64227e9cabd609dd235eb3dd86 *man/utils.Rd
 6efbea6ed0404655104f141b49a9e6ab *src/Makevars.in
 4df25307cd0a3d79ad9917172dba1868 *src/Makevars.win
 cca3fe0ad8e8e547c04660f30c6610b5 *src/Rgmp.h
-3b9adba4fe112898991f8381a22956ec *src/apply.cc
+0160d8d824e9417c2eb31302c6ee1b08 *src/apply.cc
 2f25f95aedc17f66633efad43411089a *src/apply.h
 ed7d326b098551bf01a828dd8696f12f *src/biginteger.cc
 e5bc28b18ba5b3da011147bf01ca9199 *src/biginteger.h
-c9e7a28a48b1e7e31c579370d85f3e2d *src/bigintegerR.cc
+eccedb646e9bf6553ac0a457116a5b5e *src/bigintegerR.cc
 96aabbcfe14d5a7f16c9ad29c26044c1 *src/bigintegerR.h
 b94f17d3b125e4d7f15d24f4545fc4fd *src/bigmod.cc
 46394c774a6bb2d90ffc10ae038a0556 *src/bigmod.h
 f6984082ffe21f74d314a3841d3af034 *src/bigrational.cc
 fc69a6bc518f742836287c62eeabee63 *src/bigrational.h
-5c41e6f8e0392f4180c5947d0cfda9c0 *src/bigrationalR.cc
+23d346d9998af2dc720be60b26359991 *src/bigrationalR.cc
 ffd81aa2f88bf05b583cd3cee3ecfcfa *src/bigrationalR.h
 e1ec49fc0a6442772c8639c756868efd *src/bigvec.cc
 230db558df92697884f54bdd6086f5de *src/bigvec.h
 bc00dbc4293e1ab6fed83a277ad20208 *src/bigvec_q.cc
 6f1233b11c4fe09df1ec46a788970e58 *src/bigvec_q.h
-3d79e9a37f7cd0f3b3aa48adbf584384 *src/extract_matrix.cc
-c956ba2b2a7d3ca38c1a16590291d2a2 *src/extract_matrix.h
+a10cddf9d0186b68deb19b6246946bf9 *src/extract_matrix.cc
+0fa23124a478177690b490c864f41ce2 *src/extract_matrix.h
 ce3846aa109f07e4e81aac715e24f7fe *src/factor.cc
 c2c8803dbb6bb4aa409704e91b4ce6b5 *src/factor.h
 b481a12932f9dc8c11ab31c0ae0d5646 *src/factorize.cc
 fa4b1298454f3eab5efccd4dc82d2c78 *src/factorize.h
 d1fcf00956d9ef65eafe8789d4e09cd0 *src/init.cc
-4a9f7da2e7b427efbbc9c76a5b3633ce *src/matrix.cc
+9abb3cd6283edcd3ec6e55565f3e8681 *src/matrix.cc
 27c32d24f8eabb71f3eed30631947a6d *src/matrix.h
-3ab9ee674fa7d2a3ae71f20bede729f7 *src/matrixq.cc
+1d923f0de44cdaa87e324435b7d582f3 *src/matrixq.cc
 243f7de4414e0f2d48b39ba3a7fb2018 *src/matrixq.h
 7ddf216fc7d6c1796f6eac06289eb8de *src/primes.h
 47814a89e2c9c5b9f0f8ebbbcacd4e87 *src/solve.cc
 424de6e67afb73e0d28ddf5c0f35bd33 *src/solve.h
 6adfc957837ffbc56138d50c425310bd *src/templateMatrix.h
 7076c656465f9b92e0278367734a2b5a *tests/arith-ex.R
-514a31d717a791a7fde4a34bc783e9a4 *tests/basic-ex.R
-22cbc8c5f5f9c7af41155f0131e8405a *tests/gmp-test.R
-a088149496e477cbb5ee9750682420d0 *tests/gmp-test.Rout.save
+fca8feb69355c06e43726abaa579be03 *tests/basic-ex.R
+08c6a32e1552010c832a47185b76b49b *tests/gmp-test.R
+2524d671329bb2d099e46386b1099abd *tests/gmp-test.Rout.save
