@@ -1,4 +1,7 @@
+2022-02-23 Antoine Lucas
 
+	rework on operator[]. Fix bugs.
+	
 2022-02-23 Antoine Lucas
 
 	rework on operator[]. Fix bugs.
